updated from Sarfaraz

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <div>
-        Hello World From Afaque 
-    </div>
+        Hello World From <s>Afaque </s> Sarfaraz ALi!
+
+    </div> 
 </body>
 </html>
