--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         Hello World From <s>Afaque </s> Sarfaraz ALi!
         By Surfaraz
         Welcome Waseem
+        Welcome Zunair
 
     </div> 
 </body>
