--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         Welcome Waseem
         Welcome Zunair
 
+        <p>I have updated another line after hosting </p>
+
     </div> 
 </body>
 </html>
